--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "helloworld",
   "version": "1.0.0",
   "description": "Says hello",
+  "main" : "index.js",
   "scripts": {
     "start": "node index.js"
   },
